--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body,
 html {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 body {
@@ -91,12 +92,19 @@ img::-moz-selection {
 #developers {
     color: white;
 }
+#about {
+    color: white;
+}
 .footer {
-        color: rgb(0, 0, 0);
-        display: table;
+    color: white;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
+    height:auto;
+    overflow:hidden;
+    position: fixed;
+    bottom: 0px;
 }
 
 @media (min-width: 992px) {
