--- a/style.css
+++ b/style.css
@@ -21,15 +21,15 @@ body {
 hr {
   max-width: 50px;
   border-width: 3px;
-  border-color: #F05F40;
+  border-color: #31708e;
 }
 
 hr.light {
-  border-color: #fff;
+  border-color: #ffaa02;
 }
 
 a {
-  color: #F05F40;
+  color: #9fedd7;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   transition: all 0.2s;
@@ -57,7 +57,7 @@ h6 {
 }
 
 .text-faded {
-  color: rgba(255, 255, 255, 0.7);
+  color: #ffaa02;
 }
 
 section {
@@ -75,28 +75,33 @@ section {
 }
 
 ::selection {
-  color: #fff;
+  color: #026670;
   background: #212529;
   text-shadow: none;
 }
 
 img::selection {
-  color: #fff;
+  color: #026670;
   background: transparent;
 }
 
 img::-moz-selection {
-  color: #fff;
+  color: #026670;
   background: transparent;
 }
+.modal-content {
+    background-color:#88bdbc;
+    color: black;
+    
+    }
 #developers {
-    color: white;
+    color: #ffaa02;
 }
 #about {
-    color: white;
+    color: #ffaa02;
 }
 .footer {
-    color: white;
+    color: #026670;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
@@ -111,7 +116,7 @@ img::-moz-selection {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 56px);
-  background-image: url("./images/face1.jpg");
+  background-image: url("./images/back3.jpg");
   background-position: center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -126,7 +131,7 @@ header.masthead hr {
 
 header.masthead h1 {
   font-size: 2rem;
-  color: white;
+  color: #026670;
 }
 
 header.masthead p {
@@ -182,13 +187,13 @@ header.masthead p {
 }
 
 .btn-primary {
-  background-color: #F05F40;
-  border-color: #F05F40;
+  background-color: #fce181;
+  border-color: #8fc1e3;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
   color: #fff;
-  background-color: #ee4b28 !important;
+  background-color: #31708e !important;
 }
 
 .btn-primary:active, .btn-primary:focus {
